--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
             ]
         }
     },
-    "minimum-stability": "stable",
+
+            "minimum-stability": "dev",
+            "prefer-stable": true,
+
     "require": {
         "php": "^8.0|^8.1|^8.2|^8.3",
         "illuminate/support": "^8.0|^9.0|^10.0|11.*"
