--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Vendor\\DynamicDataFetchPackage\\": "src/"
+            "abukbt13\\DynamicDataFetchPackage\\": "src/"
         }
     },
     "authors": [
@@ -17,7 +17,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Vendor\\DynamicDataFetchPackage\\Providers\\DynamicDataFetchServiceProvider"
+                "abukbt13\\DynamicDataFetchPackage\\Providers\\DynamicDataFetchServiceProvider"
             ]
         }
     },
